MAKE FORM-CREATE-DATA

--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -33,6 +33,8 @@ $pagination-focus-color: $blue;
 $pagination-hover-color: $blue;
 $pagination-active-border-color: $blue;
 $pagination-focus-box-shadow: transparent;
+$input-focus-box-shadow: transparent;
+
 .px-lg-7 {
     padding-left: 10rem;
     padding-right: 10rem;
