--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -8,7 +8,8 @@
 
 $dropdown-min-width: 5vh;
 $dropdown-padding-x: 0;
-
+$dropdown-link-active-color: $component-active-color;
+$dropdown-link-active-bg: lightgray;
 $dropdown-padding-y: 0.2rem;
 $font-family-sans-serif: "DM Sans", -apple-system, "Segoe UI", Roboto,
     "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif,
@@ -26,15 +27,19 @@ $utilities: map-merge(
     )
 );
 $pagination-color: $blue;
-$pagination-active-color: white;
-$pagination-active-bg: $blue;
+$pagination-active-color: $blue;
+$pagination-active-bg: white;
 $pagination-border-color: $blue;
 $pagination-focus-color: $blue;
 $pagination-hover-color: $blue;
 $pagination-active-border-color: $blue;
 $pagination-focus-box-shadow: transparent;
 $input-focus-box-shadow: transparent;
-
+$form-check-input-checked-bg-color: rgb(var(--bs-primary-rgb));
+$form-check-input-focus-box-shadow: none;
+$input-focus-box-shadow: none;
+$form-select-focus-box-shadow: none;
+$btn-focus-box-shadow: none;
 .px-lg-7 {
     padding-left: 10rem;
     padding-right: 10rem;
